[studio.topmonks.com] Added width and height attributes to images

--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -356,31 +356,31 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/bouncepilot.svg" alt="Bounce Pilot Logo" style="width: 137px;"/>
+          <img src="/images/logo/bouncepilot.svg" alt="Bounce Pilot Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/lafluence.svg" alt="Lafluence Logo" style="width: 137px;"/>
+          <img src="/images/logo/lafluence.svg" alt="Lafluence Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/swarmpit.svg" alt="Swarmpit Logo" style="width: 137px;"/>
+          <img src="/images/logo/swarmpit.svg" alt="Swarmpit Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/purposefly.svg" alt="Purposefly Logo" style="width: 137px;"/>
+          <img src="/images/logo/purposefly.svg" alt="Purposefly Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/ingrid.svg" alt="Ingrid Logo" style="width: 137px;"/>
+          <img src="/images/logo/ingrid.svg" alt="Ingrid Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/quickshirt.svg" alt="Quickshirt Logo" style="width: 137px;"/>
+          <img src="/images/logo/quickshirt.svg" alt="Quickshirt Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/coocoon.svg" alt="CooCoon Logo" style="width: 137px;"/>
+          <img src="/images/logo/coocoon.svg" alt="CooCoon Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/2pocket.svg" alt="2pocket Logo" style="width: 137px"/>
+          <img src="/images/logo/2pocket.svg" alt="2pocket Logo" width="137" height="137"/>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-          <img src="/images/logo/hookamonk.svg" alt="Hookamonk Logo" style="width: 137px;"/>
+          <img src="/images/logo/hookamonk.svg" alt="Hookamonk Logo" width="137" height="137"/>
         </div>
       </div>
     </div>
