ARX - html + css

--- a/arx.monks.cloud/src/stylesheets/colors.scss
+++ b/arx.monks.cloud/src/stylesheets/colors.scss
@@ -4,6 +4,7 @@
   --mdc-theme--secondary: #000;
   --mdc-theme--secondary-light: #6A6A6A;
   --mdc-theme--secondary-lighter: #B7B7B7;
+  --mdc-theme--secondary-bg: #F3F4F5;
 
   --mdc-theme--third: #0A2137;
 
