--- a/arx.monks.cloud/src/stylesheets/colors.scss
+++ b/arx.monks.cloud/src/stylesheets/colors.scss
@@ -7,6 +7,8 @@
   --mdc-theme--secondary-bg: #F3F4F5;
 
   --mdc-theme--third: #0A2137;
+  --mdc-theme--third-dark: #232A35;
+
 
   --mdc-theme--fourth: #FFA300;
 }
