[arx.monks.cloud] Removed MDC and added Proxima Nova font

--- a/arx.monks.cloud/src/stylesheets/typography.scss
+++ b/arx.monks.cloud/src/stylesheets/typography.scss
@@ -1,9 +1,7 @@
-:root {
-
-}
+@import url(https://use.typekit.net/sxe0okz.css);
 
 body {
-  font-family: Proxima Nova;
+  font: 16px "proxima-nova", sans-serif;
   margin: 0;
 }
 
