[arx.monks.cloud] Updated top nav bar

--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -50,12 +50,12 @@
                     class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
                 <nav id="navigation" class="menu">
                     <ul class="menu__list">
-                        <li class="list_item"><a href="/">Strategy</a></li>
-                        <li class="list_item"><a href="/proc-to-delame/">Work With Us</a></li>
-                        <li class="list_item"><a href="/media/">Team</a></li>
-                        <li class="list_item"><a href="/dashboard/">Investments</a></li>
-                        <li class="list_item"><a href="/dashboard/">News</a></li>
-                        <li class="list_item"><a href="/dashboard/">Contact</a></li>
+                        <li class="list_item"><a href="/strategy/">Strategy</a></li>
+                        <li class="list_item"><a href="/work-with-us/">Work With Us</a></li>
+                        <li class="list_item"><a href="/team/">Team</a></li>
+                        <li class="list_item"><a href="/investments/">Investments</a></li>
+                        <li class="list_item"><a href="/news/">News</a></li>
+                        <li class="list_item"><a href="/contact/">Contact</a></li>
                     </ul>
                 </nav>
             </div>
