ARX - Homepage stylizace + svg

--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -8,6 +8,9 @@
       background: #fff url("/assets/img/header-bg.jpg") top right no-repeat;
       background-size: 70% 744px;
     }
+    .intro {
+      min-height: 700px;
+    }
   </style>
 {% endblock %}
 
