--- a/arx.monks.cloud/src/stylesheets/news.scss
+++ b/arx.monks.cloud/src/stylesheets/news.scss
@@ -1,16 +1,21 @@
-.news {
+.news_page {
   article {
+    color: var(--mdc-theme--secondary);
     h3, a {
       font-size: 24px;
       font-weight: bold;
       line-height: 29px;
-      color: var(--mdc-theme--secondary);
+    }
+
+    time {
+      font-size: 18px;
+      font-weight: normal;
+      line-height: 32px;
     }
 
     p {
       font-size: 20px;
       line-height: 32px;
-      color: var(--mdc-theme--secondary);
       opacity: 0.43;
     }
   }
