--- a/arx.monks.cloud/src/html/work-with-us/index.njk
+++ b/arx.monks.cloud/src/html/work-with-us/index.njk
@@ -1,19 +1,28 @@
 {% extends "layouts/arx.njk" %}
 {% from "common/helpers.njk" import image %}
 
-{% block head %}
-<link rel="stylesheet" href="/assets/css/team.css">
-{% endblock %}
-
 {% block links %}
-<style>
+  <link rel="stylesheet" href="/assets/css/work-with-us.css">
+
+  <style>
   /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
   body {
     background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-    background-size: 70% auto;
+    background-size: 70% 755px;
   }
   .intro {
-    min-height: 580px;
+    min-height: 700px;
+  }
+  .intro-box {
+    padding: 9em 4em;
+  }
+  .intro-box:before {
+    content: "";
+    width: 40%;
+    height: 4px;
+    background-color: var(--mdc-theme--fourth);
+    display: block;
+    margin: 30px 0;
   }
 </style>
 {% endblock %}
@@ -24,7 +33,7 @@
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
       <div class="dark-box intro-box mdc-layout-grid__cell">
-        <p>How we work with our companies</p>
+        <p>How we work with our companies.</p>
       </div>
     </div>
   </div>
@@ -42,7 +51,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Entrepreneurs</h2>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Expansion through acquisitions or new markets</h3>
         <p>Over half of the ARX investments over the last decade have achieved growth
           through completing an add-on acquisition or entering a new geographic market.
@@ -50,24 +59,24 @@
           to fund growth.</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="right-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Introducing the right people</h3>
         <p>We’ve developed a deep pool of talented industry experts over our 20-year history that can help strengthen
           management teams and boards.</p>
       </div>
-      <div class="dark-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="dark-box left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Keeping debt levels low</h3>
         <p>We don’t believe in burdening our companies with excessive debt. We keep
           debt levels low so the company can pursue opportunities for&nbsp;growth.</p>
       </div>
       <div
-        class="yellow-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="right-padding_box yellow-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--dark">Positioning businesses for the future</h3>
         <p>We have proven expertise in positioning former family-owned businesses for eventual exits to international
           strategic buyers.</p>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="left-padding_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3 class="underline--light">Non-executive board development</h3>
         <p>ARX adds value through its systematic approach to introducing best-practice corporate governance, reporting
           standards and strategic guidance.</p>
@@ -88,7 +97,7 @@
           managers become shareholders alongside ARX. Whether in a management buyout (MBO)
           or a management buy-in (MBI) structure, equity-oriented incentive structures
           create strong alignment and a solid partnership with our portfolio company
-          management&nbsp;teams</p>
+          management&nbsp;teams.</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-12-desktop">
         <h3 class="underline--light">Autonomy</h3>
@@ -104,10 +113,10 @@
     </div>
   </div>
 </section>
-<section class="">
+<section class="intermediaries">
   <div class="mdc-layout-grid layout-arx">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+      <div class="intermediaries_main-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <h2>Intermediaries</h2>
         <p class="sub-title">For over 20&nbsp;years we&nbsp;have worked with intermediaries of all types&nbsp;&ndash;
           whether individual deal introducers or multinational institutional
