--- a/arx.monks.cloud/src/stylesheets/main.scss
+++ b/arx.monks.cloud/src/stylesheets/main.scss
@@ -59,6 +59,13 @@ html {
   }
 }
 
+.left-padding_box {
+  padding: 2em 3em 4em 6em;
+}
+.right-padding_box {
+  padding: 2em 6em 4em 3em;
+}
+
 .white-box {
   background: var(--mdc-theme--primary);
 }
@@ -103,19 +110,15 @@ html {
 /* INTRO */
 .intro {
   margin-top: 3em;
-  min-height: 700px;
-
   p {
     font-size: 40px;
     font-weight: normal;
     line-height: 46px;
     max-width: 500px;
   }
-
   .intro-box {
     z-index: 10;
     width: 660px;
-    padding: 44px;
     box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.03);
   }
 }
@@ -192,7 +195,7 @@ html {
   background-color: var(--mdc-theme--secondary-bg);
 
   .article-title {
-    height: 120px;
+    min-height: 114px;
   }
 
   h4 {
@@ -200,6 +203,9 @@ html {
     font-weight: bold;
     line-height: 27px;
     text-transform: initial;
+    a {
+      color: var(--mdc-theme--secondary);
+    }
   }
 
   p {
