ARX - Šířka bg na jednotlivých stránkách

--- a/arx.monks.cloud/src/html/team/index.njk
+++ b/arx.monks.cloud/src/html/team/index.njk
@@ -8,7 +8,13 @@
     /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
     body {
       background: #fff url("/assets/img/team-bg.jpg")top right no-repeat;
-      background-size: 70% 755px;
+      background-size: 60% 755px;
+    }
+    @media (max-width: 1024px) {
+      body {
+        background: #fff url("/assets/img/team-bg.jpg")top right no-repeat;
+        background-size: 70% auto;
+      }
     }
     .intro {
       min-height: 700px;
