--- a/arx.monks.cloud/src/html/case-study/index.njk
+++ b/arx.monks.cloud/src/html/case-study/index.njk
@@ -6,10 +6,17 @@
     /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
     body {
       background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
-      background-size: 70% auto;
+      background-size: 60% auto;
     }
+    @media (max-width: 1024px) {
+      body {
+        background: #fff url("/assets/img/case-study-bg.jpg") top right no-repeat;
+        background-size: 70% auto;
+      }
+    }
+
     .intro {
-      min-height: 580px;
+      min-height: 700px;
     }
     .intro-box {
       padding: 9em 4em;
