--- a/arx.monks.cloud/src/html/news/index.njk
+++ b/arx.monks.cloud/src/html/news/index.njk
@@ -1,18 +1,25 @@
 {% extends "layouts/arx.njk" %}
 
-{% block head %}
-  <link rel="stylesheet" href="/assets/css/news.css">
-{% endblock %}
-
 {% block links %}
+  <link rel="stylesheet" href="/assets/css/news.css">
+
   <style>
     /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
     body {
       background: #fff url("/assets/img/news-bg.jpg") top right no-repeat;
-      background-size: 70% 446px;
+      background-size: 60% 446px;
+    }
+    @media (max-width: 1024px) {
+      body {
+        background: #fff url("/assets/img/news-bg.jpg") top right no-repeat;
+        background-size: 70% auto;
+      }
     }
     .intro {
       min-height: 440px;
+    }
+    .intro-box {
+      padding: 2em 4em;
     }
   </style>
 {% endblock %}
@@ -55,4 +62,17 @@
       </div>
     </section>
   {% endfor %}
+
+
+  <section>
+    <div class="mdc-layout-grid layout-arx">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+          <div class="button text-center">
+            <a class="button--info" href="/news/">LOAD MORE</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 {% endblock %}
