--- a/arx.monks.cloud/src/html/strategy/index.njk
+++ b/arx.monks.cloud/src/html/strategy/index.njk
@@ -8,13 +8,20 @@
   /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
   body {
     background: #fff url("/assets/img/strategy-bg.jpg") top right no-repeat;
-    background-size: 70% 755px;
+    background-size: 60% 755px;
   }
+  @media (max-width: 1024px) {
+    body {
+      background: #fff url("/assets/img/strategy-bg.jpg") top right no-repeat;
+      background-size: 70% auto;
+    }
+  }
+
   .intro {
     min-height: 700px;
   }
   .intro-box {
-    padding: 6em 4em;
+    padding: 4em;
   }
 </style>
 {% endblock %}
