ARX - úpravy na HP

--- a/arx.monks.cloud/src/html/layouts/arx.njk
+++ b/arx.monks.cloud/src/html/layouts/arx.njk
@@ -144,7 +144,7 @@
                     European Parliament and the Council establishing a Programme for the
                     Competitiveness of Enterprises and small and medium enterprises (COSME)
                     (2014&ndash;2020).</p>
-              <svg style="margin: 0.5em 0.5em 0.5em 0" width="53" height="36" viewBox="0 0 53 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg style="margin: 0.5em 0.5em 0 0" width="53" height="36" viewBox="0 0 53 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <title>[Flag] EU</title>
                 <path d="M53 0H0V36H53V0Z" fill="#003399"/>
                 <path
