ARX - podstránka Investments - stylizace

--- a/arx.monks.cloud/src/stylesheets/investments.scss
+++ b/arx.monks.cloud/src/stylesheets/investments.scss
@@ -1,4 +1,7 @@
 .box--text {
+  .investment-description {
+    min-height: 60px;
+  }
   p.filter {
     color: var(--mdc-theme--secondary);
     opacity: 1;
