--- a/arx.monks.cloud/src/html/index.njk
+++ b/arx.monks.cloud/src/html/index.njk
@@ -2,34 +2,15 @@
 {% from "common/helpers.njk" import image %}
 
 {% block links %}
-  <style>
-    /* TODO: Move this to separate sass file and use cloudinaryUrl helper */
-    body {
-      background: #fff url("/assets/img/header-bg.jpg") top right no-repeat;
-      background-size: 60% 744px;
-    }
-    @media (max-width: 1024px) {
-      body {
-        background: #fff url("/assets/img/header-bg.jpg") top right no-repeat;
-        background-size: 70% auto;
-      }
-    }
-    
-    .intro {
-      min-height: 700px;
-    }
-    .intro-box {
-      padding: 4em;
-    }
-  </style>
+  <link rel="stylesheet" href="/assets/css/hp.css">
 {% endblock %}
 
 {% block main %}
   <section class="intro">
     <div class="mdc-layout-grid layout-arx">
       <div class="mdc-layout-grid__inner">
-        <div class="intro-box white-box mdc-layout-grid__cell">
-          <p>We are proud of our<br>20-year track record of building great companies in
+        <div class="intro-box white-box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-desktop">
+          <p><span>We are proud of our<br>20-year track record</span> of building great companies in
             successful partnerships with business owners and managers.</p>
           <div class="button">
             <a class="button--info" href="">MORE INFO</a>
